--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="hero">
+    <div id="top" class="hero">
         <!-- <nav>
             <ul>
                 <h2 class="logo">Portfo<span>lio</span></h2>
@@ -40,7 +40,7 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#about">About Us</a></li>
-                    <li><a href="#Footer">Contact Me</a></li>
+                    <li><a href="#resume">My Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -49,22 +49,23 @@
         <div class="content">
             <h4>Hello, My name is </h4>
             <h1><span>S</span>ai <span> K</span>umar</h1>
-            <h3>I'm an Upcoming <span>Designer</span></h3>
+            <h3>I'm an Upcoming <span>Developer</span></h3>
     
-            <div class="newsletter">
-                {% block content %}
-                <form method="post" action="">
-                    
-                    <input type="text" name="Mail" id="MailId" placeholder="enter your email">
-                    {% csrf_token %}
-                    <input type="submit" name="submit" value="Lets Start">
-                    
-                </form>
-                {% endblock%}
-    
-            </div>
+            
     
         </div>
+    </div>
+    <div class="newsletter">
+        {% block content %}
+        <form method="post" action="">
+            
+            <input type="text" name="Mail" id="MailId" placeholder="enter your email">
+            {% csrf_token %}
+            <input type="submit" name="submit" value="Lets Start">
+            
+        </form>
+        {% endblock%}
+
     </div>
 
   <!-- about section start -->
@@ -193,6 +194,14 @@
         </div>
     </div>
 
+    <!-- RESUME START -->
+    <div id="resume" class="resume_cont">
+        <h1>Resume</h1>
+        <img class="resume_img" src="{% static 'home/img/Resume_psk.jpg' %}" alt="resume loading">
+        <div class="button"><a href="https://drive.google.com/file/d/1pFTSmt8WAaxsJf1Fxu2KIZebe2OCVu0u/view?usp=sharing">Download</a></div>
+    </div>
+
+    <!-- RESUME END -->
     
     <div id="Footer" class="footer">
         
@@ -207,11 +216,11 @@
         <div class="quick-links">
             <ul>
             
-                <li class="quick-items"><a href="#">Home</a></li>
-                <li class="quick-items"><a href="#">Skills</a></li>
-                <li class="quick-items"><a href="#">Services</a></li>
-                <li class="quick-items"><a href="#">About Us</a></li>
-                <li class="quick-items"><a href="#">Contact Me</a></li>
+                <li class="quick-items"><a href="#top">Home</a></li>
+                <li class="quick-items"><a href="#skills">Skills</a></li>
+                <li class="quick-items"><a href="#projects">Projects</a></li>
+                <li class="quick-items"><a href="#about">About Us</a></li>
+                <li class="quick-items"><a href="#resume">My Resume</a></li>
 
             </ul>
         </div>
