--- a/static/home/css/style.css
+++ b/static/home/css/style.css
@@ -6,12 +6,13 @@
     background-color: rgb(0,0,0,0.8)
 }
 body{
-    background-color: rgb(0,0,0,0.8)
+    background-color: rgb(0,0,0,0.8);
+    
 }
 .hero{
 
     height: 100vh;
-    width: 100%;
+    width: fit-content;
     background-image: url( ../img/background_img.jpg );
     background-size:cover;
     opacity: 0.82;
@@ -129,6 +130,28 @@ header{
         background:black;
         width: 100%;
     }
+    .newsletter form{
+        display: flex;
+        
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100vw;
+    }
+    .newsletter form input:last-child{
+    position:relative;
+    background-color:#f9004d ;
+    border: 2px solid transparent;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;
+    transition: transform .4s;
+    
+    
+
+}
 }
 
 .logo:hover{
@@ -207,7 +230,7 @@ span{
 .letme{
 
     color: white;
-    position: relative;
+    margin-top: 3%;
     top:10vh;
     margin-left:5%;
     font-size: 40px;
@@ -216,10 +239,12 @@ span{
 
 
 .content{
-    position: absolute;
-    top: 40%;
-    left: 10%;
+    margin-top: 5%;
+    margin-left: 10%;
     background: none;
+    display: flext;
+    flex-direction: column;
+    justify-content: space-around;
     
 }
 
@@ -228,6 +253,7 @@ span{
     font-size: 60px;
     margin: 10px 0px 20px;
     background: none;
+    
     
 }
 .content h1 span{
@@ -261,19 +287,20 @@ span{
 
 
 .newsletter form{
-    width:100%;
+    width:80%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position:absolute ;
+    
     
     
 }
 
 .newsletter form input:first-child{
     display: inline-flex;
-    width:80% ;
-    padding: 14px 130px 14px 15px;
+    width:100%;
+    margin-left:10%;
+    padding: 14px 0px 14px 15px;
     border:#f9004d 2px solid;
     border-radius: 20px;
     outline: none;
@@ -399,7 +426,7 @@ span{
 .projects .item{
     display: grid;
     position: relative;
-    width: 100%;
+    width: 1vw;
     top: 9%;
     grid-template-columns:repeat(auto-fit,minmax(360px,2fr));    
     grid-column-gap:10%;
@@ -409,7 +436,7 @@ span{
 .item .child{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width:95vw ;
     height: auto;
     box-shadow: #f9004d;
     margin-top:10px ;
@@ -432,6 +459,7 @@ span{
     color: rgba(247, 253, 253, 0.8);
     line-height: 25px;
     background: none;
+    width: 100%;
 }
 
 
@@ -517,7 +545,7 @@ span{
     height: auto;
     display: flex;
     flex-direction: column;
-    
+    overflow-wrap: break-word;
 
 }
 
@@ -528,6 +556,8 @@ span{
     font-size: 50px;
     text-align: center;
     background: none;
+    
+    
 
 }
 
@@ -612,4 +642,54 @@ span{
     text-align: center;
     padding: 5px;
 }
+/* RESUME */
+.resume_cont{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.resume_img{
+    width:80%;
+    align-self: center;
+    justify-self: center;
+}
+.resume_cont .button{
+    text-align: right;
+    align-self: self-end;
+    margin-right: 10%;
+    position:relative;
+    padding: 5px;
+    border: 2px solid #f9004d;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    transition: transform .4s;
+    background-color: #f9004d;
+    margin-top: 15px;
+    width: fit-content;
+}
 
+.resume_cont .button:hover{
+    background:none;
+    color: #f9004d;
+    transform: scale(1.2);
+    border: 2px solid #f9004d;
+    cursor: pointer;
+}
+.button a{
+    text-decoration: none;
+    background: none;
+    color: whitesmoke;
+}
+.resume_cont h1{
+    color: white;
+    margin: 30px;
+    padding-top: 20px;
+    font-size: 50px;
+    text-align: center;
+    background: none;
+}
+  
